2012-10-29  Romain Francois <romain@r-enthusiasts.com>

    * R/Module.R: Taking care of a check warning

2012-10-28  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/Rmath.h: Beginnings of a namespave 'R' around
	Rmath functions so that Rcpp users can call the (scalar) functions
	R::pnorm() which helps with adapting or integrating programs writting
	outside of Rcpp

2012-10-27  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/module/macros.h: Add forward declaration of class
	to macro 'RCPP_EXPOSED_CLASS'

2012-10-25  Romain Francois <romain@r-enthusiasts.com>

    * include/Rcpp/internal/wrap.h: wrapping module object with the help
    of the RCPP_EXPOSED_CLASS
    * include/Rcpp/module/macros.h: improving the macros so that wrap and as
    are covered
    * include/Rcpp/traits/wrap_type_traits.h: wrapping module objects
    * include/Rcpp/module/Module_generated_class_factory.h : factories are alternatives
    to constructors. For now, we can expose as factories any free function
    that returns a pointer to the target class
    * include/Rcpp/module/Module_generated_Factory.h : factories
    * include/Rcpp/Module.h: exposing factories

2012-10-24  Romain Francois <romain@r-enthusiasts.com>

    * include/Rcpp/traits/is_pointer.h: traits to identify if a type is a pointer
    * include/Rcpp/traits/un_pointer.h: traits to remove a pointer
    * include/Rcpp/module/Module_generated_get_return_type.h : handle pointer return types
    * include/Rcpp/config.h: define RCPP_HAS_DEMANGLING for MAC OS <= 10.7 (up to Lion)
    * include/Rcpp/module/macros.h: new file that contains macro to help with modules
    * include/Rcpp/traits/r_type_traits.h : new tag to allow as<T> where T
    is some class exposed in a module
    * include/Rcpp/as.h : implementation of as<T> in that case

2012-10-23  Romain Francois <romain@r-enthusiasts.com>
    
    * include/Rcpp/internal/wrap.h: new function module_wrap used internally by modules